// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeArtifact package registry build workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "pnpm exec projen".

name: build
on:
  pull_request: {}
  workflow_dispatch: {}
jobs:
  build:
    runs-on: ubuntu-24.04-arm
    permissions:
      contents: write
      id-token: write
    outputs:
      self_mutation_happened: \${{ steps.self_mutation.outputs.self_mutation_happened }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v7
        with:
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
      - name: Setup pnpm
        uses: pnpm/action-setup@v6
        with:
          version: "9"
      - name: Setup Node.js
        uses: actions/setup-node@v7
        with:
          node-version: 14.18.1
          package-manager-cache: false
      - name: Assume AWS Role For CodeArtifact
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: arn:aws:iam::123:role/GithubRole
          aws-region: us-east-1
          role-session-name: CodeArtifactSession
      - name: Login to AWS CodeArtifact
        id: login-codeartifact
        run: aws codeartifact login --tool npm --domain CK --domain-owner 123 --repository CK-artifacts --region us-east-1
      - name: Install dependencies
        run: pnpm i --no-frozen-lockfile
      - name: build
        run: pnpm exec projen build
      - name: Assume AWS Role in Dev
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: devRole
          aws-region: us-east-1
          role-session-name: Session_Dev
      - name: Deployment to Dev
        run: pnpm Deploy_Dev
      - name: Find mutations
        id: self_mutation
        run: |-
          git add .
          git diff --staged --patch --exit-code > repo.patch || echo "self_mutation_happened=true" >> $GITHUB_OUTPUT
        shell: bash
        working-directory: ./
      - name: Upload patch
        if: steps.self_mutation.outputs.self_mutation_happened
        uses: actions/upload-artifact@v7
        with:
          name: repo.patch
          path: repo.patch
          overwrite: true
      - name: Fail build on mutation
        if: steps.self_mutation.outputs.self_mutation_happened
        run: |-
          echo "::error::Files were changed during build (see build log). If this was triggered from a fork, you will need to update your branch."
          cat repo.patch
          exit 1
  self-mutation:
    needs: build
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: always() && needs.build.outputs.self_mutation_happened && !(github.event.pull_request.head.repo.full_name != github.repository)
    steps:
      - name: Checkout
        id: checkout
        uses: actions/checkout@v7
        with:
          token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
      - name: Download patch
        id: download_patch
        uses: actions/download-artifact@v8
        with:
          name: repo.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        id: apply_patch
        run: '[ -s \${{ runner.temp }}/repo.patch ] && git apply \${{ runner.temp }}/repo.patch || echo "Empty patch. Skipping."'
      - name: Set git identity
        id: set_git_identity
        run: |-
          git config user.name "github-actions[bot]"
          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
      - name: Push changes
        id: push_changes
        env:
          PULL_REQUEST_REF: \${{ github.event.pull_request.head.ref }}
        run: |-
          git add .
          git commit -s -m "chore: self mutation"
          git push origin "HEAD:$PULL_REQUEST_REF"
"
`;

exports[`CodeArtifact package registry manual workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "pnpm exec projen".

name: prod-deployment-workflow
on:
  workflow_dispatch:
    inputs:
      tag:
        description: Version tag to deploy to Prod
        required: true
jobs:
  deploy_to_Prod:
    runs-on: ubuntu-24.04-arm
    permissions:
      contents: write
      deployments: read
      id-token: write
      issues: write
    steps:
      - name: Checkout
        id: checkout
        uses: actions/checkout@v7
        with:
          fetch-depth: 0
          ref: main
      - name: Get tag
        id: get_tag
        run: |-
          if [ -z "\${{ github.event.inputs.tag }}" ]; then 
           CURRENT_TAG=$(git describe --tags $(git rev-list --tags --max-count=1)) 
           echo "CURRENT_TAG=$CURRENT_TAG" >> $GITHUB_ENV 
          else 
           echo "CURRENT_TAG=\${{ github.event.inputs.tag }}" >> $GITHUB_ENV 
          fi
      - name: Checkout
        id: checkout_2
        uses: actions/checkout@v7
        with:
          fetch-depth: 0
          ref: \${{ env.CURRENT_TAG }}
      - name: Setup pnpm
        id: setup_pnpm
        uses: pnpm/action-setup@v6
        with:
          version: "9"
      - name: Setup Node.js
        id: setup_node_js
        uses: actions/setup-node@v7
        with:
          node-version: 14.18.1
          package-manager-cache: false
      - name: Assume AWS Role For CodeArtifact
        id: assume_aws_role_for_codeartifact
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: arn:aws:iam::123:role/GithubRole
          aws-region: us-east-1
          role-session-name: CodeArtifactSession
      - name: Login to AWS CodeArtifact
        id: login-codeartifact
        run: aws codeartifact login --tool npm --domain CK --domain-owner 123 --repository CK-artifacts --region us-east-1
      - name: Install dependencies
        id: install_dependencies
        run: pnpm i --frozen-lockfile
      - name: Assume AWS Role in Prod
        id: assume_aws_role_in_prod
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: prodRole
          aws-region: us-east-1
          role-session-name: Session_Prod
      - name: Deployment to Prod
        id: deployment_to_prod
        run: pnpm Deploy_Prod
"
`;

exports[`CodeArtifact package registry release workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "pnpm exec projen".

name: release
run-name: \${{ inputs.dry_run && format('[DRY RUN] release by @{0}', github.actor) || '' }}
on:
  push:
    branches:
      - main
  workflow_dispatch:
    inputs:
      dry_run:
        description: Dry run (skip actual publishing)
        required: false
        type: boolean
concurrency:
  group: \${{ github.workflow }}
  cancel-in-progress: false
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
      id-token: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
      tag_exists: \${{ steps.check_tag_exists.outputs.exists }}
      artifact_id: \${{ steps.upload_artifact.outputs.artifact-id }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        id: checkout
        uses: actions/checkout@v7
        with:
          fetch-depth: 0
      - name: Set git identity
        id: set_git_identity
        run: |-
          git config user.name "github-actions[bot]"
          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
      - name: Setup pnpm
        id: setup_pnpm
        uses: pnpm/action-setup@v6
        with:
          version: "9"
      - name: Setup Node.js
        id: setup_node_js
        uses: actions/setup-node@v7
        with:
          node-version: 14.18.1
          package-manager-cache: false
      - name: Assume AWS Role For CodeArtifact
        id: assume_aws_role_for_codeartifact
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: arn:aws:iam::123:role/GithubRole
          aws-region: us-east-1
          role-session-name: CodeArtifactSession
      - name: Login to AWS CodeArtifact
        id: login-codeartifact
        run: aws codeartifact login --tool npm --domain CK --domain-owner 123 --repository CK-artifacts --region us-east-1
      - name: Install dependencies
        id: install_dependencies
        run: pnpm i --frozen-lockfile
      - name: release
        id: release
        run: pnpm exec projen release
      - name: Check if version has already been tagged
        id: check_tag_exists
        run: |-
          TAG=$(cat dist/releasetag.txt)
          ([ ! -z "$TAG" ] && git ls-remote -q --exit-code --tags origin $TAG && (echo "exists=true" >> $GITHUB_OUTPUT)) || (echo "exists=false" >> $GITHUB_OUTPUT)
          cat $GITHUB_OUTPUT
      - name: Check for new commits
        id: git_remote
        env:
          GITHUB_REF: \${{ github.ref }}
        run: |-
          echo "latest_commit=$(git ls-remote origin -h "$GITHUB_REF" | cut -f1)" >> $GITHUB_OUTPUT
          cat $GITHUB_OUTPUT
        shell: bash
      - name: Backup artifact permissions
        id: backup_artifact_permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        id: upload_artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v7
        with:
          name: build-artifact
          path: dist
          overwrite: true
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v7
        with:
          node-version: 14.18.1
          package-manager-cache: false
      - name: Download build artifacts
        id: download_build_artifacts
        uses: actions/download-artifact@v8
        with:
          artifact-ids: \${{ needs.release.outputs.artifact_id }}
          path: dist
      - name: Restore build artifact permissions
        id: restore_build_artifact_permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        id: release
        if: \${{ !inputs.dry_run }}
        env:
          RELEASE_TAG_FILE: dist/releasetag.txt
          CHANGELOG_FILE: dist/changelog.md
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: |-
          errout=$(mktemp)
          tag=$(cat "$RELEASE_TAG_FILE")
          gh release create "$tag" -R "$GITHUB_REPOSITORY" -F "$CHANGELOG_FILE" -t "$tag" --target "$GITHUB_SHA" \${PRERELEASE:+-p} 2> "$errout" && true
          exitcode=$?
          if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" "$errout"; then
            cat "$errout"
            exit $exitcode
          fi
  Deploy_Test:
    needs: release_github
    runs-on: ubuntu-24.04-arm
    permissions:
      contents: write
      deployments: read
      id-token: write
      issues: write
    steps:
      - name: Checkout
        id: checkout
        uses: actions/checkout@v7
        with:
          fetch-depth: 0
          ref: main
      - name: Get tag
        id: get_tag
        run: |-
          if [ -z "\${{ github.event.inputs.tag }}" ]; then 
           CURRENT_TAG=$(git describe --tags $(git rev-list --tags --max-count=1)) 
           echo "CURRENT_TAG=$CURRENT_TAG" >> $GITHUB_ENV 
          else 
           echo "CURRENT_TAG=\${{ github.event.inputs.tag }}" >> $GITHUB_ENV 
          fi
      - name: Checkout
        id: checkout_2
        uses: actions/checkout@v7
        with:
          fetch-depth: 0
          ref: \${{ env.CURRENT_TAG }}
      - name: Setup pnpm
        id: setup_pnpm
        uses: pnpm/action-setup@v6
        with:
          version: "9"
      - name: Setup Node.js
        id: setup_node_js
        uses: actions/setup-node@v7
        with:
          node-version: 14.18.1
          package-manager-cache: false
      - name: Assume AWS Role For CodeArtifact
        id: assume_aws_role_for_codeartifact
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: arn:aws:iam::123:role/GithubRole
          aws-region: us-east-1
          role-session-name: CodeArtifactSession
      - name: Login to AWS CodeArtifact
        id: login-codeartifact
        run: aws codeartifact login --tool npm --domain CK --domain-owner 123 --repository CK-artifacts --region us-east-1
      - name: Install dependencies
        id: install_dependencies
        run: pnpm i --frozen-lockfile
      - name: Assume AWS Role in Test
        id: assume_aws_role_in_test
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: testRole
          aws-region: us-east-1
          role-session-name: Session_Test
      - name: Deployment to Test
        id: deployment_to_test
        run: pnpm Deploy_Test
"
`;

exports[`CodeArtifact package registry upgrade workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "pnpm exec projen".

name: upgrade-main
on:
  workflow_dispatch: {}
  schedule:
    - cron: 0 0 * * *
jobs:
  upgrade:
    name: Upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: read
      id-token: write
    outputs:
      patch_created: \${{ steps.create_patch.outputs.patch_created }}
    steps:
      - name: Checkout
        id: checkout
        uses: actions/checkout@v7
        with:
          ref: main
      - name: Setup pnpm
        id: setup_pnpm
        uses: pnpm/action-setup@v6
        with:
          version: "9"
      - name: Setup Node.js
        id: setup_node_js
        uses: actions/setup-node@v7
        with:
          node-version: 14.18.1
          package-manager-cache: false
      - name: Assume AWS Role For CodeArtifact
        id: assume_aws_role_for_codeartifact
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: arn:aws:iam::123:role/GithubRole
          aws-region: us-east-1
          role-session-name: CodeArtifactSession
      - name: Login to AWS CodeArtifact
        id: login-codeartifact
        run: aws codeartifact login --tool npm --domain CK --domain-owner 123 --repository CK-artifacts --region us-east-1
      - name: Install dependencies
        id: install_dependencies
        run: pnpm i --frozen-lockfile
      - name: Upgrade dependencies
        id: upgrade_dependencies
        run: pnpm exec projen upgrade
      - name: Find mutations
        id: create_patch
        run: |-
          git add .
          git diff --staged --patch --exit-code > repo.patch || echo "patch_created=true" >> $GITHUB_OUTPUT
        shell: bash
        working-directory: ./
      - name: Upload patch
        id: upload_patch
        if: steps.create_patch.outputs.patch_created
        uses: actions/upload-artifact@v7
        with:
          name: repo.patch
          path: repo.patch
          overwrite: true
  pr:
    name: Create Pull Request
    needs: upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: read
    if: \${{ needs.upgrade.outputs.patch_created }}
    steps:
      - name: Checkout
        id: checkout
        uses: actions/checkout@v7
        with:
          ref: main
      - name: Download patch
        id: download_patch
        uses: actions/download-artifact@v8
        with:
          name: repo.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        id: apply_patch
        run: '[ -s \${{ runner.temp }}/repo.patch ] && git apply \${{ runner.temp }}/repo.patch || echo "Empty patch. Skipping."'
      - name: Set git identity
        id: set_git_identity
        run: |-
          git config user.name "github-actions[bot]"
          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
      - name: Create Pull Request
        id: create-pr
        uses: peter-evans/create-pull-request@v8
        with:
          token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          commit-message: |-
            chore(deps): upgrade dependencies

            Upgrades project dependencies. See details in [workflow run].

            [Workflow Run]: \${{ github.server_url }}/\${{ github.repository }}/actions/runs/\${{ github.run_id }}

            ------

            *Automatically created by projen via the "upgrade-main" workflow*
          branch: github-actions/upgrade-main
          title: "chore(deps): upgrade dependencies"
          body: |-
            Upgrades project dependencies. See details in [workflow run].

            [Workflow Run]: \${{ github.server_url }}/\${{ github.repository }}/actions/runs/\${{ github.run_id }}

            ------

            *Automatically created by projen via the "upgrade-main" workflow*
          author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
          committer: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
          signoff: true
"
`;

exports[`Multi app deployment build workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "pnpm exec projen".

name: build
on:
  pull_request: {}
  workflow_dispatch: {}
jobs:
  build:
    runs-on: ubuntu-24.04-arm
    permissions:
      contents: write
      id-token: write
    outputs:
      self_mutation_happened: \${{ steps.self_mutation.outputs.self_mutation_happened }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v7
        with:
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
      - name: Setup pnpm
        uses: pnpm/action-setup@v6
        with:
          version: "9"
      - name: Setup Node.js
        uses: actions/setup-node@v7
        with:
          node-version: 14.18.1
          package-manager-cache: false
      - name: Assume AWS Role For CodeArtifact
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: role
          aws-region: us-east-1
          role-session-name: CodeArtifactSession
      - name: Login to AWS CodeArtifact
        id: login-codeartifact
        run: aws codeartifact login --tool npm --domain domain --domain-owner 123 --repository repo --region us-east-1
      - name: Install dependencies
        run: pnpm i --no-frozen-lockfile
      - name: build
        run: pnpm exec projen build
      - name: Assume AWS Role in Dev_Api
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: role123
          aws-region: us-east-1
          role-session-name: Session_Dev_Api
      - name: Deployment to Dev_Api
        run: pnpm Deploy_Dev_Api
      - name: Assume AWS Role in Dev_Web
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: role456
          aws-region: us-east-1
          role-session-name: Session_Dev_Web
      - name: Deployment to Dev_Web
        run: pnpm Deploy_Dev_Web
      - name: Find mutations
        id: self_mutation
        run: |-
          git add .
          git diff --staged --patch --exit-code > repo.patch || echo "self_mutation_happened=true" >> $GITHUB_OUTPUT
        shell: bash
        working-directory: ./
      - name: Upload patch
        if: steps.self_mutation.outputs.self_mutation_happened
        uses: actions/upload-artifact@v7
        with:
          name: repo.patch
          path: repo.patch
          overwrite: true
      - name: Fail build on mutation
        if: steps.self_mutation.outputs.self_mutation_happened
        run: |-
          echo "::error::Files were changed during build (see build log). If this was triggered from a fork, you will need to update your branch."
          cat repo.patch
          exit 1
  self-mutation:
    needs: build
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: always() && needs.build.outputs.self_mutation_happened && !(github.event.pull_request.head.repo.full_name != github.repository)
    steps:
      - name: Checkout
        id: checkout
        uses: actions/checkout@v7
        with:
          token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
      - name: Download patch
        id: download_patch
        uses: actions/download-artifact@v8
        with:
          name: repo.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        id: apply_patch
        run: '[ -s \${{ runner.temp }}/repo.patch ] && git apply \${{ runner.temp }}/repo.patch || echo "Empty patch. Skipping."'
      - name: Set git identity
        id: set_git_identity
        run: |-
          git config user.name "github-actions[bot]"
          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
      - name: Push changes
        id: push_changes
        env:
          PULL_REQUEST_REF: \${{ github.event.pull_request.head.ref }}
        run: |-
          git add .
          git commit -s -m "chore: self mutation"
          git push origin "HEAD:$PULL_REQUEST_REF"
"
`;

exports[`Multi app release deployment release workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "pnpm exec projen".

name: release
run-name: \${{ inputs.dry_run && format('[DRY RUN] release by @{0}', github.actor) || '' }}
on:
  push:
    branches:
      - main
  workflow_dispatch:
    inputs:
      dry_run:
        description: Dry run (skip actual publishing)
        required: false
        type: boolean
concurrency:
  group: \${{ github.workflow }}
  cancel-in-progress: false
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
      tag_exists: \${{ steps.check_tag_exists.outputs.exists }}
      artifact_id: \${{ steps.upload_artifact.outputs.artifact-id }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        id: checkout
        uses: actions/checkout@v7
        with:
          fetch-depth: 0
      - name: Set git identity
        id: set_git_identity
        run: |-
          git config user.name "github-actions[bot]"
          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
      - name: Setup pnpm
        id: setup_pnpm
        uses: pnpm/action-setup@v6
        with:
          version: "9"
      - name: Setup Node.js
        id: setup_node_js
        uses: actions/setup-node@v7
        with:
          node-version: 14.18.1
          package-manager-cache: false
      - name: Install dependencies
        id: install_dependencies
        run: pnpm i --frozen-lockfile
      - name: release
        id: release
        run: pnpm exec projen release
      - name: Check if version has already been tagged
        id: check_tag_exists
        run: |-
          TAG=$(cat dist/releasetag.txt)
          ([ ! -z "$TAG" ] && git ls-remote -q --exit-code --tags origin $TAG && (echo "exists=true" >> $GITHUB_OUTPUT)) || (echo "exists=false" >> $GITHUB_OUTPUT)
          cat $GITHUB_OUTPUT
      - name: Check for new commits
        id: git_remote
        env:
          GITHUB_REF: \${{ github.ref }}
        run: |-
          echo "latest_commit=$(git ls-remote origin -h "$GITHUB_REF" | cut -f1)" >> $GITHUB_OUTPUT
          cat $GITHUB_OUTPUT
        shell: bash
      - name: Backup artifact permissions
        id: backup_artifact_permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        id: upload_artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v7
        with:
          name: build-artifact
          path: dist
          overwrite: true
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v7
        with:
          node-version: 14.18.1
          package-manager-cache: false
      - name: Download build artifacts
        id: download_build_artifacts
        uses: actions/download-artifact@v8
        with:
          artifact-ids: \${{ needs.release.outputs.artifact_id }}
          path: dist
      - name: Restore build artifact permissions
        id: restore_build_artifact_permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        id: release
        if: \${{ !inputs.dry_run }}
        env:
          RELEASE_TAG_FILE: dist/releasetag.txt
          CHANGELOG_FILE: dist/changelog.md
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: |-
          errout=$(mktemp)
          tag=$(cat "$RELEASE_TAG_FILE")
          gh release create "$tag" -R "$GITHUB_REPOSITORY" -F "$CHANGELOG_FILE" -t "$tag" --target "$GITHUB_SHA" \${PRERELEASE:+-p} 2> "$errout" && true
          exitcode=$?
          if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" "$errout"; then
            cat "$errout"
            exit $exitcode
          fi
  Deploy_Dev_Api:
    needs: release_github
    runs-on: ubuntu-24.04-arm
    permissions:
      contents: write
      deployments: read
      id-token: write
      issues: write
    steps:
      - name: Checkout
        id: checkout
        uses: actions/checkout@v7
        with:
          fetch-depth: 0
          ref: main
      - name: Get tag
        id: get_tag
        run: |-
          if [ -z "\${{ github.event.inputs.tag }}" ]; then 
           CURRENT_TAG=$(git describe --tags $(git rev-list --tags --max-count=1)) 
           echo "CURRENT_TAG=$CURRENT_TAG" >> $GITHUB_ENV 
          else 
           echo "CURRENT_TAG=\${{ github.event.inputs.tag }}" >> $GITHUB_ENV 
          fi
      - name: Checkout
        id: checkout_2
        uses: actions/checkout@v7
        with:
          fetch-depth: 0
          ref: \${{ env.CURRENT_TAG }}
      - name: Setup pnpm
        id: setup_pnpm
        uses: pnpm/action-setup@v6
        with:
          version: "9"
      - name: Setup Node.js
        id: setup_node_js
        uses: actions/setup-node@v7
        with:
          node-version: 14.18.1
          package-manager-cache: false
      - name: Install dependencies
        id: install_dependencies
        run: pnpm i --frozen-lockfile
      - name: Assume AWS Role in Dev_Api
        id: assume_aws_role_in_dev_api
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: devRoleApi
          aws-region: us-east-1
          role-session-name: Session_Dev_Api
      - name: Deployment to Dev_Api
        id: deployment_to_dev_api
        run: pnpm Deploy_Dev_Api
  Deploy_Dev_Web:
    needs: release_github
    runs-on: ubuntu-24.04-arm
    permissions:
      contents: write
      deployments: read
      id-token: write
      issues: write
    steps:
      - name: Checkout
        id: checkout
        uses: actions/checkout@v7
        with:
          fetch-depth: 0
          ref: main
      - name: Get tag
        id: get_tag
        run: |-
          if [ -z "\${{ github.event.inputs.tag }}" ]; then 
           CURRENT_TAG=$(git describe --tags $(git rev-list --tags --max-count=1)) 
           echo "CURRENT_TAG=$CURRENT_TAG" >> $GITHUB_ENV 
          else 
           echo "CURRENT_TAG=\${{ github.event.inputs.tag }}" >> $GITHUB_ENV 
          fi
      - name: Checkout
        id: checkout_2
        uses: actions/checkout@v7
        with:
          fetch-depth: 0
          ref: \${{ env.CURRENT_TAG }}
      - name: Setup pnpm
        id: setup_pnpm
        uses: pnpm/action-setup@v6
        with:
          version: "9"
      - name: Setup Node.js
        id: setup_node_js
        uses: actions/setup-node@v7
        with:
          node-version: 14.18.1
          package-manager-cache: false
      - name: Install dependencies
        id: install_dependencies
        run: pnpm i --frozen-lockfile
      - name: Assume AWS Role in Dev_Web
        id: assume_aws_role_in_dev_web
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: devRoleWeb
          aws-region: us-east-1
          role-session-name: Session_Dev_Web
      - name: Deployment to Dev_Web
        id: deployment_to_dev_web
        run: pnpm Deploy_Dev_Web
  Deploy_Prod_Api:
    needs:
      - release_github
      - Deploy_Dev_Api
      - Deploy_Dev_Web
    runs-on: ubuntu-24.04-arm
    permissions:
      contents: write
      deployments: read
      id-token: write
      issues: write
    steps:
      - name: Checkout
        id: checkout
        uses: actions/checkout@v7
        with:
          fetch-depth: 0
          ref: main
      - name: Get tag
        id: get_tag
        run: |-
          if [ -z "\${{ github.event.inputs.tag }}" ]; then 
           CURRENT_TAG=$(git describe --tags $(git rev-list --tags --max-count=1)) 
           echo "CURRENT_TAG=$CURRENT_TAG" >> $GITHUB_ENV 
          else 
           echo "CURRENT_TAG=\${{ github.event.inputs.tag }}" >> $GITHUB_ENV 
          fi
      - name: Checkout
        id: checkout_2
        uses: actions/checkout@v7
        with:
          fetch-depth: 0
          ref: \${{ env.CURRENT_TAG }}
      - name: Setup pnpm
        id: setup_pnpm
        uses: pnpm/action-setup@v6
        with:
          version: "9"
      - name: Setup Node.js
        id: setup_node_js
        uses: actions/setup-node@v7
        with:
          node-version: 14.18.1
          package-manager-cache: false
      - name: Install dependencies
        id: install_dependencies
        run: pnpm i --frozen-lockfile
      - name: Assume AWS Role in Prod_Api
        id: assume_aws_role_in_prod_api
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: prodRoleApi
          aws-region: us-east-1
          role-session-name: Session_Prod_Api
      - name: Deployment to Prod_Api
        id: deployment_to_prod_api
        run: pnpm Deploy_Prod_Api
  Deploy_Prod_Web:
    needs: Deploy_Prod_Api
    runs-on: ubuntu-24.04-arm
    permissions:
      contents: write
      deployments: read
      id-token: write
      issues: write
    steps:
      - name: Checkout
        id: checkout
        uses: actions/checkout@v7
        with:
          fetch-depth: 0
          ref: main
      - name: Get tag
        id: get_tag
        run: |-
          if [ -z "\${{ github.event.inputs.tag }}" ]; then 
           CURRENT_TAG=$(git describe --tags $(git rev-list --tags --max-count=1)) 
           echo "CURRENT_TAG=$CURRENT_TAG" >> $GITHUB_ENV 
          else 
           echo "CURRENT_TAG=\${{ github.event.inputs.tag }}" >> $GITHUB_ENV 
          fi
      - name: Checkout
        id: checkout_2
        uses: actions/checkout@v7
        with:
          fetch-depth: 0
          ref: \${{ env.CURRENT_TAG }}
      - name: Setup pnpm
        id: setup_pnpm
        uses: pnpm/action-setup@v6
        with:
          version: "9"
      - name: Setup Node.js
        id: setup_node_js
        uses: actions/setup-node@v7
        with:
          node-version: 14.18.1
          package-manager-cache: false
      - name: Install dependencies
        id: install_dependencies
        run: pnpm i --frozen-lockfile
      - name: Assume AWS Role in Prod_Web
        id: assume_aws_role_in_prod_web
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: prodRoleWeb
          aws-region: us-east-1
          role-session-name: Session_Prod_Web
      - name: Deployment to Prod_Web
        id: deployment_to_prod_web
        run: pnpm Deploy_Prod_Web
"
`;

exports[`No stack pattern build workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "pnpm exec projen".

name: build
on:
  pull_request: {}
  workflow_dispatch: {}
jobs:
  build:
    runs-on: ubuntu-24.04-arm
    permissions:
      contents: write
      id-token: write
    outputs:
      self_mutation_happened: \${{ steps.self_mutation.outputs.self_mutation_happened }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@v7
        with:
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
      - name: Setup pnpm
        uses: pnpm/action-setup@v6
        with:
          version: "9"
      - name: Setup Node.js
        uses: actions/setup-node@v7
        with:
          node-version: 14.18.1
          package-manager-cache: false
      - name: Assume AWS Role For CodeArtifact
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: role
          aws-region: us-east-1
          role-session-name: CodeArtifactSession
      - name: Login to AWS CodeArtifact
        id: login-codeartifact
        run: aws codeartifact login --tool npm --domain domain --domain-owner 123 --repository repo --region us-east-1
      - name: Install dependencies
        run: pnpm i --no-frozen-lockfile
      - name: build
        run: pnpm exec projen build
      - name: Assume AWS Role in Dev
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: role
          aws-region: us-east-1
          role-session-name: Session_Dev
      - name: Deployment to Dev
        run: pnpm Deploy_Dev
      - name: Find mutations
        id: self_mutation
        run: |-
          git add .
          git diff --staged --patch --exit-code > repo.patch || echo "self_mutation_happened=true" >> $GITHUB_OUTPUT
        shell: bash
        working-directory: ./
      - name: Upload patch
        if: steps.self_mutation.outputs.self_mutation_happened
        uses: actions/upload-artifact@v7
        with:
          name: repo.patch
          path: repo.patch
          overwrite: true
      - name: Fail build on mutation
        if: steps.self_mutation.outputs.self_mutation_happened
        run: |-
          echo "::error::Files were changed during build (see build log). If this was triggered from a fork, you will need to update your branch."
          cat repo.patch
          exit 1
  self-mutation:
    needs: build
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: always() && needs.build.outputs.self_mutation_happened && !(github.event.pull_request.head.repo.full_name != github.repository)
    steps:
      - name: Checkout
        id: checkout
        uses: actions/checkout@v7
        with:
          token: \${{ secrets.PROJEN_GITHUB_TOKEN }}
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
      - name: Download patch
        id: download_patch
        uses: actions/download-artifact@v8
        with:
          name: repo.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        id: apply_patch
        run: '[ -s \${{ runner.temp }}/repo.patch ] && git apply \${{ runner.temp }}/repo.patch || echo "Empty patch. Skipping."'
      - name: Set git identity
        id: set_git_identity
        run: |-
          git config user.name "github-actions[bot]"
          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
      - name: Push changes
        id: push_changes
        env:
          PULL_REQUEST_REF: \${{ github.event.pull_request.head.ref }}
        run: |-
          git add .
          git commit -s -m "chore: self mutation"
          git push origin "HEAD:$PULL_REQUEST_REF"
"
`;

exports[`No stack pattern deploy to prod workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "pnpm exec projen".

name: prod-deployment-workflow
on:
  workflow_dispatch:
    inputs:
      tag:
        description: Version tag to deploy to Prod
        required: true
jobs:
  deploy_to_Prod:
    runs-on: ubuntu-24.04-arm
    permissions:
      contents: write
      deployments: read
      id-token: write
      issues: write
    steps:
      - name: Checkout
        id: checkout
        uses: actions/checkout@v7
        with:
          fetch-depth: 0
          ref: main
      - name: Get tag
        id: get_tag
        run: |-
          if [ -z "\${{ github.event.inputs.tag }}" ]; then 
           CURRENT_TAG=$(git describe --tags $(git rev-list --tags --max-count=1)) 
           echo "CURRENT_TAG=$CURRENT_TAG" >> $GITHUB_ENV 
          else 
           echo "CURRENT_TAG=\${{ github.event.inputs.tag }}" >> $GITHUB_ENV 
          fi
      - name: Checkout
        id: checkout_2
        uses: actions/checkout@v7
        with:
          fetch-depth: 0
          ref: \${{ env.CURRENT_TAG }}
      - name: Setup pnpm
        id: setup_pnpm
        uses: pnpm/action-setup@v6
        with:
          version: "9"
      - name: Setup Node.js
        id: setup_node_js
        uses: actions/setup-node@v7
        with:
          node-version: 14.18.1
          package-manager-cache: false
      - name: Assume AWS Role For CodeArtifact
        id: assume_aws_role_for_codeartifact
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: role
          aws-region: us-east-1
          role-session-name: CodeArtifactSession
      - name: Login to AWS CodeArtifact
        id: login-codeartifact
        run: aws codeartifact login --tool npm --domain domain --domain-owner 123 --repository repo --region us-east-1
      - name: Install dependencies
        id: install_dependencies
        run: pnpm i --frozen-lockfile
      - name: Assume AWS Role in Prod
        id: assume_aws_role_in_prod
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: role2
          aws-region: us-east-1
          role-session-name: Session_Prod
      - name: Deployment to Prod
        id: deployment_to_prod
        run: pnpm Deploy_Prod
"
`;

exports[`No stack pattern deploy to uat workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "pnpm exec projen".

name: uat-deployment-workflow
on:
  workflow_dispatch:
    inputs:
      tag:
        description: Version tag to deploy to Uat
        required: true
jobs:
  deploy_to_Uat:
    runs-on: ubuntu-24.04-arm
    permissions:
      contents: write
      deployments: read
      id-token: write
      issues: write
    steps:
      - name: Checkout
        id: checkout
        uses: actions/checkout@v7
        with:
          fetch-depth: 0
          ref: main
      - name: Get tag
        id: get_tag
        run: |-
          if [ -z "\${{ github.event.inputs.tag }}" ]; then 
           CURRENT_TAG=$(git describe --tags $(git rev-list --tags --max-count=1)) 
           echo "CURRENT_TAG=$CURRENT_TAG" >> $GITHUB_ENV 
          else 
           echo "CURRENT_TAG=\${{ github.event.inputs.tag }}" >> $GITHUB_ENV 
          fi
      - name: Checkout
        id: checkout_2
        uses: actions/checkout@v7
        with:
          fetch-depth: 0
          ref: \${{ env.CURRENT_TAG }}
      - name: Setup pnpm
        id: setup_pnpm
        uses: pnpm/action-setup@v6
        with:
          version: "9"
      - name: Setup Node.js
        id: setup_node_js
        uses: actions/setup-node@v7
        with:
          node-version: 14.18.1
          package-manager-cache: false
      - name: Assume AWS Role For CodeArtifact
        id: assume_aws_role_for_codeartifact
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: role
          aws-region: us-east-1
          role-session-name: CodeArtifactSession
      - name: Login to AWS CodeArtifact
        id: login-codeartifact
        run: aws codeartifact login --tool npm --domain domain --domain-owner 123 --repository repo --region us-east-1
      - name: Install dependencies
        id: install_dependencies
        run: pnpm i --frozen-lockfile
      - name: Assume AWS Role in Uat
        id: assume_aws_role_in_uat
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: role2
          aws-region: us-east-1
          role-session-name: Session_Uat
      - name: Deployment to Uat
        id: deployment_to_uat
        run: pnpm Deploy_Uat
"
`;

exports[`No stack pattern release workflow 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.ts and run "pnpm exec projen".

name: release
run-name: \${{ inputs.dry_run && format('[DRY RUN] release by @{0}', github.actor) || '' }}
on:
  push:
    branches:
      - main
  workflow_dispatch:
    inputs:
      dry_run:
        description: Dry run (skip actual publishing)
        required: false
        type: boolean
concurrency:
  group: \${{ github.workflow }}
  cancel-in-progress: false
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
      id-token: write
    outputs:
      latest_commit: \${{ steps.git_remote.outputs.latest_commit }}
      tag_exists: \${{ steps.check_tag_exists.outputs.exists }}
      artifact_id: \${{ steps.upload_artifact.outputs.artifact-id }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        id: checkout
        uses: actions/checkout@v7
        with:
          fetch-depth: 0
      - name: Set git identity
        id: set_git_identity
        run: |-
          git config user.name "github-actions[bot]"
          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
      - name: Setup pnpm
        id: setup_pnpm
        uses: pnpm/action-setup@v6
        with:
          version: "9"
      - name: Setup Node.js
        id: setup_node_js
        uses: actions/setup-node@v7
        with:
          node-version: 14.18.1
          package-manager-cache: false
      - name: Assume AWS Role For CodeArtifact
        id: assume_aws_role_for_codeartifact
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: role
          aws-region: us-east-1
          role-session-name: CodeArtifactSession
      - name: Login to AWS CodeArtifact
        id: login-codeartifact
        run: aws codeartifact login --tool npm --domain domain --domain-owner 123 --repository repo --region us-east-1
      - name: Install dependencies
        id: install_dependencies
        run: pnpm i --frozen-lockfile
      - name: release
        id: release
        run: pnpm exec projen release
      - name: Check if version has already been tagged
        id: check_tag_exists
        run: |-
          TAG=$(cat dist/releasetag.txt)
          ([ ! -z "$TAG" ] && git ls-remote -q --exit-code --tags origin $TAG && (echo "exists=true" >> $GITHUB_OUTPUT)) || (echo "exists=false" >> $GITHUB_OUTPUT)
          cat $GITHUB_OUTPUT
      - name: Check for new commits
        id: git_remote
        env:
          GITHUB_REF: \${{ github.ref }}
        run: |-
          echo "latest_commit=$(git ls-remote origin -h "$GITHUB_REF" | cut -f1)" >> $GITHUB_OUTPUT
          cat $GITHUB_OUTPUT
        shell: bash
      - name: Backup artifact permissions
        id: backup_artifact_permissions
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: cd dist && getfacl -R . > permissions-backup.acl
        continue-on-error: true
      - name: Upload artifact
        id: upload_artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v7
        with:
          name: build-artifact
          path: dist
          overwrite: true
  release_github:
    name: Publish to GitHub Releases
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: needs.release.outputs.tag_exists != 'true' && needs.release.outputs.latest_commit == github.sha
    steps:
      - uses: actions/setup-node@v7
        with:
          node-version: 14.18.1
          package-manager-cache: false
      - name: Download build artifacts
        id: download_build_artifacts
        uses: actions/download-artifact@v8
        with:
          artifact-ids: \${{ needs.release.outputs.artifact_id }}
          path: dist
      - name: Restore build artifact permissions
        id: restore_build_artifact_permissions
        run: cd dist && setfacl --restore=permissions-backup.acl
        continue-on-error: true
      - name: Release
        id: release
        if: \${{ !inputs.dry_run }}
        env:
          RELEASE_TAG_FILE: dist/releasetag.txt
          CHANGELOG_FILE: dist/changelog.md
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: |-
          errout=$(mktemp)
          tag=$(cat "$RELEASE_TAG_FILE")
          gh release create "$tag" -R "$GITHUB_REPOSITORY" -F "$CHANGELOG_FILE" -t "$tag" --target "$GITHUB_SHA" \${PRERELEASE:+-p} 2> "$errout" && true
          exitcode=$?
          if [ $exitcode -ne 0 ] && ! grep -q "Release.tag_name already exists" "$errout"; then
            cat "$errout"
            exit $exitcode
          fi
  Deploy_Test:
    needs: release_github
    runs-on: ubuntu-24.04-arm
    permissions:
      contents: write
      deployments: read
      id-token: write
      issues: write
    steps:
      - name: Checkout
        id: checkout
        uses: actions/checkout@v7
        with:
          fetch-depth: 0
          ref: main
      - name: Get tag
        id: get_tag
        run: |-
          if [ -z "\${{ github.event.inputs.tag }}" ]; then 
           CURRENT_TAG=$(git describe --tags $(git rev-list --tags --max-count=1)) 
           echo "CURRENT_TAG=$CURRENT_TAG" >> $GITHUB_ENV 
          else 
           echo "CURRENT_TAG=\${{ github.event.inputs.tag }}" >> $GITHUB_ENV 
          fi
      - name: Checkout
        id: checkout_2
        uses: actions/checkout@v7
        with:
          fetch-depth: 0
          ref: \${{ env.CURRENT_TAG }}
      - name: Setup pnpm
        id: setup_pnpm
        uses: pnpm/action-setup@v6
        with:
          version: "9"
      - name: Setup Node.js
        id: setup_node_js
        uses: actions/setup-node@v7
        with:
          node-version: 14.18.1
          package-manager-cache: false
      - name: Assume AWS Role For CodeArtifact
        id: assume_aws_role_for_codeartifact
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: role
          aws-region: us-east-1
          role-session-name: CodeArtifactSession
      - name: Login to AWS CodeArtifact
        id: login-codeartifact
        run: aws codeartifact login --tool npm --domain domain --domain-owner 123 --repository repo --region us-east-1
      - name: Install dependencies
        id: install_dependencies
        run: pnpm i --frozen-lockfile
      - name: Assume AWS Role in Test
        id: assume_aws_role_in_test
        uses: aws-actions/configure-aws-credentials@v6
        with:
          role-to-assume: role
          aws-region: us-east-1
          role-session-name: Session_Test
      - name: Deployment to Test
        id: deployment_to_test
        run: pnpm Deploy_Test
"
`;
